@@ -1,10 +1,11 @@
-$Id: NEWS,v 1.97 2001-04-20 12:31:41 flood Exp $
+$Id: NEWS,v 1.98 2001-04-20 15:20:17 flood Exp $
 
 1.2.2rc2 - CVS
 ---------------------------------
 The `AllowChmod' directive has been deprecated, and will not work
 consistantly.  Use <Limit SITE_CHMOD> instead.
 
+- Bug 1112 - Compilation fix for IRIX 6.2.
 - Bug 1128 - Fixed possibled Linux sendfile() corruption issue.
 - Bug 1093 - Checking for world writable log files and symlinks.
 - Bug 1094 - AuthUserFile/AuthGroupFile disallow relative paths.
